# remember_to_buy

./: README.md  pyproject.toml  sql_app.db
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/depends/: depends.py
app/api/v1/errors/: error_handling.py  errors.py
app/api/v1/helpers/: __init__.py  helper.py
app/api/v1/middlewares/: after_route.py
app/api/v1/models/: items_model.py
app/api/v1/schemas/: item_schema.py  pagination_schema.py  response_schema.py
app/api/v1/views/items/: item_resource.py
app/config/: settings.py
app/database/: crud.py  database.py
migrations/: env.py
migrations/versions/: 3d6f479e84d7_init_dbs.py  9e5260026980_init_db.py
